# Filament-Winding

./: CMakeLists.txt  phase0_decisions.md
.claude/: settings.local.json
MATLAB/phase1a_geometry/: ellipsoidal_dome_profile.m  ellipsoidal_dome_verification_report.txt  hemispherical_dome_profile.m  hemispherical_dome_verification_report.txt  isotenoid_dome_verification_report.txt  isotensoid_dome_profile.m  verify_ellipsoidal_dome.m  verify_hemispherical_dome.m  verify_isotensoid_dome.m
MATLAB/phase2a_winding/: export_reference_data.m  geodesic_single_circuit.m  plot_geodesic_demo.m  run_geodesic_demo.m  verify_geodesic_path.m
MATLAB/phase2a_winding/reference_data/: geodesic_ref_ellipsoidal_S1.csv  geodesic_ref_ellipsoidal_S2.csv  geodesic_ref_ellipsoidal_S3.csv  geodesic_ref_ellipsoidal_S4.csv  geodesic_ref_hemispherical_S1.csv  geodesic_ref_hemispherical_S2.csv  geodesic_ref_hemispherical_S3.csv  geodesic_ref_hemispherical_S4.csv  geodesic_ref_isotensoid_S1.csv  geodesic_ref_isotensoid_S2.csv  geodesic_ref_isotensoid_S3.csv  geodesic_ref_isotensoid_S4.csv
MATLAB/phase2a_winding/utils/: dome_phi_integration.m
MATLAB/phase2b_pattern/: export_pattern_reference.m  find_compatible_patterns.m  pattern_solver.m  plot_full_coverage.m  plot_pattern_demo.m  verify_pattern.m
MATLAB/phase2b_pattern/reference_data/: TEST-01_ellipsoidal_patterns.csv  TEST-01_hemispherical_patterns.csv  TEST-01_isotensoid_patterns.csv  TEST-02_ellipsoidal_patterns.csv  TEST-02_hemispherical_patterns.csv  TEST-02_isotensoid_patterns.csv  TEST-03_ellipsoidal_patterns.csv  TEST-03_hemispherical_patterns.csv  TEST-03_isotensoid_patterns.csv  TEST-04_ellipsoidal_patterns.csv  TEST-04_hemispherical_patterns.csv  TEST-04_isotensoid_patterns.csv
docs/: gate_1b_01_report.md  gate_2a_report.md  phase0_decisions.md  phase1b_plan.md  phase2a_geodesic_math.md  phase2b_pattern_math.md
include/geodesic/: geodesic_solver.h
include/geometry/: config_parser.h  ellipsoidal_profile.h  filament_types.h  hemispherical_profile.h  i_meridian_profile.h  isotensoid_profile.h  mandrel_geometry.h  meridian_lookup_table.h
src/geodesic/: geodesic_solver.cpp
src/geometry/: CMakeLists.txt  config_parser.cpp  ellipsoidal_profile.cpp  hemispherical_profile.cpp  isotensoid_profile.cpp  mandrel_geometry.cpp  meridian_lookup_table.cpp
tests/: CMakeLists.txt  test_config_parser.cpp  test_ellipsoidal_profile.cpp  test_gate_1b_01.cpp  test_geodesic_solver.cpp  test_hemispherical_profile.cpp  test_isotensoid_profile.cpp  test_mandrel_geometry.cpp  test_meridian_lookup_table.cpp  test_placeholder.cpp
